Something that works
working highlighting

better

working suggestions

detect wrong deps

working clean

rebasing

rebasing